# MTQR

./: CMakeLists.txt  README.md  autoinstall
data/: BETAS.h  GL_NODES.h  GL_WEIGHTS.h  TabulatedErrorValues.csv  TabulatedGlNodes.csv  TabulatedGlWeights.csv
doc/: .gitignore
doc/latex/: CustomStyle.sty  UserManual.tex  bibtex.bib
doc/latex/snippets/: App.cpp  DatIo.h  Main.cpp  Main_Loud.cpp  Main_Silent.cpp  Makefile  MonMap.h  Quasimont.cpp  Quasimont.h  Utils.h  data_management.h  main_compare.cpp  main_loud.cpp  main_silent.cpp  makefile  monomial_transformation.h  mtqr.h  vector_operations.h
doc/latex/snippets/static/: App.cpp  makefile
include/: DatIo.h  ExtractData.h  GenerateTabValues.h  Inputs.h  MonMap.h  Prototypes.h  Quasimont.h  Utils.h  data_management.h  datio.h  hiperquad.h  monmap.h  monomial_transformation.h  mtqr.h  vector_operations.h
output/n=14/: Results.txt
output/n=14/plot/: Epsilon.csv  ExactError.csv  ExactErrorEnv.csv
output/n=32/: Results.txt
output/n=32/plot/: Epsilon.csv
output/test1/: GetInputData.h
output/test2/: GetInputData.h
output/test3/: GetInputData.h
src/: DatIo.cpp  MonMap.cpp  Quasimont.cpp  data_management.cpp  datio.cpp  hiperquad.cpp  main  main.cpp  makefile  monmap.cpp  monomial_transformation.cpp  mtqr.cpp  plot.sh  vector_operations.cpp
src/unix/: main.cpp  makefile
static/: App.cpp  makefile
test/: Main.cpp  Test1.cpp  Test2.cpp  main.cpp  makefile
test/output/: Nodes.txt  Results.txt  Weights.txt
tests/bessel/bessel_1/: main.cpp
tests/bessel/bessel_2/: main.cpp
tests/bessel/bessel_3/: main.cpp
tests/bessels/: main.cpp
tests/drivers/: main.cpp
tests/integration/: main.cpp
tests/monomial/: main.cpp
utilities/: ErrTools.cpp  Plot.cpp  Utils.cpp  VecOps.cpp  VectorManip.cpp  makefile  plot.sh
